--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -228,7 +228,9 @@ $\chi^2 = 14.223$,
 
 which is a ratio of how the observed counts vary from the expected counts as compared to the expected counts, has a **Chi-squared Distribution** with the parameter
 
-$df = (R-1)(C-1) = (3-1)(3-1) = 4$
+$df = (R-1)(C-1) = (3-1)(3-1) = 4$,
+
+called **degrees of freedom**, which changes the shape of the Chi-squared distribution - the higher the degrees of freedom, the less skewed, more symmetric, more spread the distribution will be, and the further will the peak shift rightward. 
 
 ##### p-value Mathematical Model Plot
 
@@ -247,11 +249,7 @@ polygon(c(xvec, rev(xvec)), c(pvec, rep(0, length(pvec))),
 abline(v = test_stat, col = "red", lwd = 2)
 ```
 
-Our null distribution (as shown above) is a **Chi-square Distribution** which is always right-skewed, only haves positive values, and has a parameter of 
-
-$df = 4$, 
-
-called **degrees of freedom**, which changes the shape of the Chi-squared distribution - the higher the degrees of freedom, the less skewed, more symmetric, more spread the distribution will be, and the further will the peak shift rightward. 
+Our null distribution (as shown above) is a **Chi-square Distribution** which is always right-skewed, only haves positive values, and has a parameter of $df = 4$.
 
 Given that we only take the right tail area to calculate p-value, our $p-value = .006615$.
 
