--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -184,7 +184,7 @@ sleep_productivity_stress |>
 
 @tbl-sleep-productivity and the corresponding @fig-sleep-productivity shows the distribution of the observed values of productivity levels across different sleep duration. 
 
-It is noticeable that individuals who sleep 5-7 hours make up the majority of "somewhat productive" group while those who sleep less than 5 hours have the highest number of individuals in the "very productive" group. For both the "not productive" and "very productive" group, the number of individuals sleeping 5-7 hours and more than 7 hours is the same. Surprisingly, in the "not productive" category, 7 individuals each reported sleeping 5-7 hours and more than 7 hours, both are significantly higher than the number of individuals sleeping less than 5 hours, which was only 1.
+It is noticeable that individuals who sleep 5-7 hours make up the majority of "somewhat productive" group with 29 individuals while those who sleep less than 5 hours have the highest number of individuals in the "very productive" group with 12 individuals. For both the "not productive" and "very productive" group, the number of individuals sleeping 5-7 hours and more than 7 hours is the same. Surprisingly, in the "not productive" category, 7 individuals each reported sleeping 5-7 hours and more than 7 hours, both are significantly higher than the number of individuals sleeping less than 5 hours, which was only 1.
 
 ## Results
 
