Add discussion, reference

--- a/citation.bib
+++ b/citation.bib
@@ -1,14 +1,3 @@
-@article{lum2016predict,
-  title={To predict and serve?},
-  author={Lum, Kristian and Isaac, William},
-  journal={Significance},
-  volume={13},
-  number={5},
-  pages={14--19},
-  year={2016},
-  publisher={Oxford University Press}
-}
-
 @misc{averagesleepduration,
   author = {{University of Georgia Health Promotion}},
   title = {Sleep - Health Promotion and Wellness},
@@ -25,4 +14,25 @@
   day = {17},
   url = {https://www.snhu.edu/about-us/newsroom/education/how-much-sleep-do-college-students-need},
   urldate = {2025-04-27}
+}
+
+@article{preetha2020knowledge,
+  title = {Knowledge and Awareness on Impact of Insufficient Sleep-A Productivity Killer, Among Dental Students.},
+  author = {Preetha, S and Prathap, Lavanya and Jeevitha, M and others},
+  journal = {International Journal of Pharmaceutical Research (09752366)},
+  volume = {12},
+  number = {1},
+  year = {2020},
+  doi= {10.31838/ijpr/2020.12.01.358}
+}
+
+@article{hassan2023relationship,
+  title = {Relationship of Sleep Quality with Mental Well-being and Academic Productivity},
+  author = {Hassan, Hamid and Muzammil, Muhammad and Malik, Muhammad Talal and Karim, Muhammad Ahmad and Lodhi, Marwah Asif and Jamil, Umar},
+  journal = {Pakistan Journal of Physiology},
+  volume = {19},
+  number = {3},
+  pages = {15--19},
+  year = {2023},
+  doi = {10.69656/pjp.v19i3.1551}
 }
