--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -38,7 +38,7 @@ sleep_productivity <- sleep_productivity_stress |>
 
 Imagine waking up after few hours of sleep, then dragging your tired body through hours of coursework, assignments, and even exams! Now imagine doing that mostly everyday, in a duration of months? According to @averagesleepduration and @recommendedsleep, most college students only get 6-6.9 hours of sleep per day on average while the recommended amount for college students is 7-9 hours. Even though it is understandable that there are certain deadlines, exams, or just work generally that seems to be more important than few extra hours of sleep, this constant trade-off may lead to unexpected consequences to both their physical and mental health.
 
-This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep college students get influence their productivity level?"**. As college students ourselves, our goal is to discover possible patterns of college students' sleep duration and whether it significantly accounts for our academic and work productivity throughout the week. Understanding such connection, we can devise our own solutions to improve our college life inside-out, both academically and personally.
+This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep a college student gets influence their productivity level?"**. As college students ourselves, our goal is to discover possible patterns of college students' sleep duration and whether it significantly accounts for our academic and work productivity throughout the week. Understanding such connection, we can devise our own solutions to improve our college life inside-out, both academically and personally.
 
 The data for this study was collected through a survey on Google Form. Our target population is college students, and our sample included students from different colleges. We mainly used a convenience sampling method, gathering many of our survey responses from our friends and acquaintances who are college students. We are investigating whether the amount of sleep a college student gets influence their productivity using Two-Way Table Test of Independence with Chi-square Distribution.
 
@@ -274,14 +274,26 @@ We choose our significance level $\alpha = .01$ to control the Type 1 error rate
 
 ##### Conclusion
 
-Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that sleep duration and productivity level are significantly related.
+Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that college students' sleep duration and productivity level are significantly related.
 
 ##### Interpretation
 
-The data provides sufficient evidence to support the claim that sleep duration is significantly related to productivity level at $\alpha = .01$ significance level. Therefore, it is reasonable to believe that the amount of sleep college students get influences their productivity level.
+The data provides statistically significant evidence to support the claim that sleep duration is significantly related to productivity level at $\alpha = .01$ significance level. Therefore, it is reasonable to believe that the amount of sleep a college student get influences their productivity level.
 
 ## Discussion
 
-## Appendix
+The statistical analysis above set out to test the relationship between weekday average hours of sleep and productivity level in college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets influences their productivity level, which answers our original research question. Our population of interest was all college students, but our sample is not accurately representative of the population of interest. Our data includes observations from students at multiple colleges, but which colleges we received data from is based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
+
+Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into a categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in a categorical and ordinal variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within our three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical is the Two-Way Table Test of Independence using a mathematical model. 
+
+A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition cannot be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. 
+
+We conducted our analysis under the assumption that the conditions described above were met. The analysis concluded that the self-reported productivity level of college students varies based on the average amount of sleep they get during weekday.  
+
+Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation, the ones most pertinent to the research we conducted are included here. Based on these results and parameters of @preetha2020knowledge, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
+
+This is reaffirmed by the results of another related analysis of medical students in @hassan2023relationship. Variables collected include sleep quality, as measured by the Pittsburgh Sleep Quality Index, levels of depression and anxiety, as scored on the Hamilton Depression (or Anxiety) Rating Scales, respectively, and academic performance scores. @hassan2023relationship concluded that poor sleep quality is correlated with higher levels of depression and anxiety, which in turn correlates negatively with academic performance. Once again, the published literature reaffirms our finding that getting less sleep diminishes a student’s ability to perform productively.
+
+Many other analyses could be conducted with the data we gathered using this form. These other variables dictate the most feasible and convenient possible future extensions to this research project. Our Google Form collected a total of six variables, only two of which were used for the statistical analysis conducted above. The variables we did not use include class year, major division, whether the respondent considers themselves an early bird or a night owl, and stress level (as a categorical variable formulated similarly to those used in the analysis carried out above). Based on these variables, we could consider examining whether stress (or productivity) levels vary based on major division or class year. We could also evaluate whether being an early bird or a night owl is correlated with higher or lower stress or productivity levels. Beyond the scope of the dataset we have collected, we could consider using random sampling to select colleges throughout the world from which to collect data, and then randomly sample students enrolled there in order to compile a larger and more robust data set. Statistical analyses of this dataset would yield results generalizable to the entire target population of college students.
 
 ## Bibliography
